# flame

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yaml  flame-conf.yaml  go.mod  go.sum  migrations  skaffold.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-verify.yaml  e2e-go.yaml  e2e-py.yaml  e2e-rust.yaml  e2e.yaml  flame-ci.yaml
ci/: .nfs0000000034bb4dff000002be  flame-conf.yaml  flame-local-conf.yaml  kind.yaml  supervisord.conf
client/: Cargo.toml  build.rs
client/protos/: types.proto
client/python/: __init__.py  flame.py  flame_test.py
client/python/protos/: frontend.proto  types.proto
client/python/rpc/: __init__.py  frontend_pb2.py  frontend_pb2.pyi  frontend_pb2_grpc.py  types_pb2.py  types_pb2.pyi
client/rust/: Cargo.toml  build.rs
client/rust/protos/: types.proto
client/rust/src/: lib.rs
client/rust/tests/: integration_test.rs
client/src/: lib.rs  trace.rs
client/tests/: integration_test.rs
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
client/wasm/wit/: flame.wit
cmd/api-gateway/: main.go
cmd/controller-manager/: main.go
cmd/scheduler/: main.go
cmd/session-manager/: main.go
cmd/webhook-manager/: main.go
common/: Cargo.toml
common/src/: apis.rs  ctx.rs  lib.rs  ptr.rs  trace.rs
docker/: Dockerfile.console  Dockerfile.fem  Dockerfile.fsm  docker-compose.yaml
docs/blogs/: README.md  evaluating-pi-by-flame-python.md  evaluating-pi-by-monte-carlo.md  run-ai-agent-with-flame.md  run-generated-script-via-flame.md
example/pi/: Cargo.toml
example/pi/src/client/: main.rs
example/pi/src/server/: .main.rs.swp  main.rs
examples/agents/: client.py
examples/candle/: Cargo.toml
examples/matrix/local/: Cargo.toml  flame.wit
examples/matrix/local/src/: main.rs
examples/matrix/server/: Cargo.toml
examples/matrix/server/src/: lib.rs  main.rs
examples/matrix/server/wit/: flame.wit
examples/mcp/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  server.go  server_test.go  types.go
examples/pi/: Cargo.toml  pi-app.yaml
examples/pi/src/: client.rs  service.rs  util.rs
examples/pi/src/client/: main.rs
examples/pi/src/local/: main.rs
examples/pi/src/server/: main.rs
examples/pypi/: client.py  main.py  (+3 more)
executor_manager/: Cargo.toml
executor_manager/src/: client.rs  executor.rs  main.rs  manager.rs  svcmgr.rs
executor_manager/src/shims/: grpc_shim.rs  log_shim.rs  mod.rs  python_shim.rs  shell_shim.rs  stdio_shim.rs  wasm_shim.rs
executor_manager/src/states/: bound.rs  idle.rs  init.rs  mod.rs  unbinding.rs  unbound.rs  unknown.rs  void.rs
executor_manager/wit/: flame.wit
flmctl/: Cargo.toml
flmctl/src/: create.rs  helper.rs  list.rs  main.rs  migrate.rs  register.rs  unregister.rs  view.rs
flmexec/: Cargo.toml
flmping/: Cargo.toml
flmping/src/: client.rs  main.rs  service.rs
fping/: Cargo.toml
installer/: flame-conf.yaml  flame-console.yaml  flame-executor-manager.yaml  flame-session-manager.yaml  flame-system.yaml  fsm-service.yaml  kustomization.yaml
protos/: session.proto
rpc/: Cargo.toml  build.rs
rpc/protos/: backend.proto  flame.proto  shim.proto  types.proto
rpc/src/: lib.rs
sdk/python/: INSTALL.md  Makefile  README.md  __init__.py  build_protos.py  example.py  flame.py  flame_test.py  frontend_pb2.py  pyproject.toml  requirements-dev.txt  requirements.txt  service_example.py  setup.py  shim_pb2.py  test_basic.py  test_service.py  test_service_basic.py  types_pb2.py
sdk/python/docs/: API.md
sdk/python/example/: client.py  service.py
sdk/python/flame/: __init__.py  client.py  flame_test.py  frontend_pb2.py  frontend_pb2.pyi  frontend_pb2_grpc.py  service.py  shim_pb2.py  shim_pb2_grpc.py  types_pb2.pyi  types_pb2_grpc.py
sdk/python/flame/client/: __init__.py  client.py  types.py
sdk/python/flame/protos/: __init__.py  placeholder.py
sdk/python/flame/rpc/: __init__.py  shim_pb2.pyi  types_pb2_grpc.py
sdk/python/protos/: frontend.proto  shim.proto  types.proto
sdk/python/rpc/: __init__.py  frontend_pb2.py
sdk/python/src/flame/: __init__.py  client.py  shim_pb2.py  shim_pb2_grpc.py  test_flame.py  types_pb2.py
sdk/python/src/flamepy/: __init__.py  frontend_pb2.py  frontend_pb2_grpc.py  service.py  shim_pb2.py  shim_pb2_grpc.py  test_flame.py  types_pb2.py
sdk/python/test/: test_flame.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/client/src/: lib.rs
sdk/rust/client/tests/: integration_test.rs
sdk/rust/protos/: frontend.proto  types.proto
sdk/rust/service/: Cargo.toml  build.rs
sdk/rust/service/protos/: shim.proto
sdk/rust/service/src/: lib.rs
sdk/rust/src/: lib.rs  trace.rs
sdk/rust/src/apis/: mod.rs
sdk/rust/src/client/: mod.rs
sdk/rust/src/service/: mod.rs
sdk/rust/tests/: integration_test.rs
session_manager/: Cargo.toml  flame-conf.yaml
session_manager/migrations/: 20231215000000-init.sql
session_manager/migrations/sqlite/: 20240104152103_init.sql  20250115120000_app.sql
session_manager/src/: main.rs
session_manager/src/apiserver/: backend.rs  frontend.rs  mod.rs
session_manager/src/controller/: mod.rs
session_manager/src/controller/states/: binding.rs  bound.rs  idle.rs  mod.rs  unbinding.rs  void.rs
session_manager/src/model/: errors.rs  macros.rs  mod.rs  snapshot.rs
session_manager/src/scheduler/: ctx.rs  mod.rs
session_manager/src/scheduler/actions/: allocate.rs  assign.rs  backfill.rs  dispatch.rs  mod.rs  preempt.rs  shuffle.rs
session_manager/src/scheduler/allocator/: mod.rs
session_manager/src/scheduler/allocator/plugins/: fairshare.rs  mod.rs
session_manager/src/scheduler/dispatcher/: mod.rs
session_manager/src/scheduler/dispatcher/plugins/: fairshare.rs  mod.rs
session_manager/src/scheduler/plugins/: fairshare.rs  mod.rs
session_manager/src/storage/: mod.rs  util.rs
session_manager/src/storage/engine/: mod.rs  postgres.rs  sqlite.rs
session_manager/src/storage/memory/: mod.rs
session_manager/src/storage/states/: binding.rs  bound.rs  idle.rs  mod.rs  unbinding.rs
(+67 files in other folders)
