[workspace]
resolver = "1"
members = [
    "common",
    "client/rust",
    "flmctl",
    "flmping",
    "session_manager",
    "executor_manager",
    "rpc",
    "examples/pi",
    "examples/matrix/client",
    "examples/matrix/local",
]

exclude = ["examples/matrix/server"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
env_logger = { version = "0.10" }
log = { version = "0.4", features = ["std", "serde"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }