[workspace]
resolver = "1"
members = [
    "common",
    "flmctl",
    "flmping",
    "flmexec",
    "session_manager",
    "executor_manager",
    "rpc",
    "sdk/rust",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
env_logger = { version = "0.11" }
log = { version = "0.4", features = ["std", "serde"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }


