[workspace]
resolver = "1"
members = [
    "common",
    "flmctl",
    "flmping",
    "flmexec",
    "session_manager",
    "executor_manager",
    "rpc",
    "sdk/rust",
    "examples/pi",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "1"

env_logger = { version = "0.11" }
log = { version = "0.4", features = ["std", "serde"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9" }

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }


