[package]
name = "flame-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }

bytes = "1"
thiserror = "1.0"
chrono = "0.4"
lazy_static = "1.4"
