[package]
name = "flame-client"
version = "0.3.0"
edition = "2021"

description = "The Rust client of Flame"
repository = "https://github.com/flame-sh/flame"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
thiserror = "1.0"
chrono = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
