[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

[dependencies.confy]
version = "0.5"
features = ["yaml_conf"]
default-features = false

