[package]
name = "common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc"}

tonic = { workspace = true }
prost = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

bytes = "1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = "0.4"

[dependencies.confy]
version = "0.5"
features = ["yaml_conf"]
default-features = false

