[package]
name = "common"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc"}

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

bytes = "1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = "0.4"
serde_yaml = "0.9"
rustix = { version = "1.0" }
num_cpus = "1.0"