[package]
name = "flame-executor-manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }

bytes = "1"
chrono = "0.4"
lazy_static = "1.4"
wasmtime = "15"
wasmtime-wasi = "15"
anyhow = "1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
