[package]
name = "flame-executor-manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tower = "0.5"
hyper-util = "0.1"

bytes = "1"
chrono = "0.4"
lazy_static = "1.4"
wasmtime = "16"
wasmtime-wasi = "16"
anyhow = "1"
rustix = "1.0"


[lints.rust]
unused = "allow"
unsafe_code = "forbid"