[package]
name = "flmctl"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-client = { path = "../client/rust" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }

clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"

url = {version = "2.5"}