[package]
name = "flmping"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flame-client = { path = "../sdk/client" }
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"
indicatif = {version = "*", features = ["rayon"]}

gethostname = "*"

[[bin]]
name = "flmping-service"
path = "src/service.rs"

[[bin]]
name = "flmping"
path = "src/client.rs"