[package]
name = "rpc"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true}

prost = "*"
prost-types = "*"
prost-build = "*"

[build-dependencies]
tonic-build = { workspace = true}
