[package]
name = "rpc"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true}
prost = { workspace = true}
prost-types = { workspace = true}
prost-build = { workspace = true}

[build-dependencies]
tonic-build = { workspace = true}
