[package]
name = "flame-session-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = {path = "../common"}

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

async-trait = "0.1"
thiserror = "1"
chrono = "0.4"
lazy_static = "1.4"