[package]
name = "flame-session-manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }

tokio-stream = { version = "0.1"}
url = { version = "2", features = ["serde"] }
futures="0.3"
thiserror = "1"
chrono = "0.4"
# lazy_static = "1.4"

soil = "0.1.3"
