[package]
name = "flame-session-manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }

tokio-stream = { version = "0.1"}
url = { version = "2", features = ["serde"] }
futures="0.3"
thiserror = "1"
chrono = "0.4"
stdng = "0.1"
bytes = "1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio-test = "*"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"