[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "*"
rand="*"

rpc = { path = "../../rpc" }
common = { path = "../../common" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "pi-server"
path = "src/server/main.rs"


[[bin]]
name = "pi"
path = "src/client/main.rs"
