[package]
name = "pi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "*"
rand="*"

flame-client = { path = "../../client" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "pi-server"
path = "src/server/main.rs"


[[bin]]
name = "pi"
path = "src/client/main.rs"

[[bin]]
name = "pi-local"
path = "src/local/main.rs"
