[package]
name = "flame-rs"
version = "0.2.1"
edition = "2021"
build = "build.rs"

description = "The Rust SDK of Flame"
repository = "https://github.com/flame-sh/flame"
license-file = "../../LICENSE"
readme = "../../README.md"

[dependencies]
tower = "0.4"
prost = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tonic = { workspace = true }

tokio-stream = "0.1"
thiserror = "1.0"
bytes = "1"
futures="0.3"
stdng = "0.1"
chrono = "0.4"
serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"

[build-dependencies]
tonic-build = { workspace = true }
