[package]
name = "matrix-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
wasmtime = "16"
wasmtime-wasi = "16"
serde_json = "1"
serde = {version="1", features = ["derive"]}
anyhow = "1"
clap = { workspace = true, features = ["derive"] }
rand = "0.8"
thiserror="*"