[package]
name = "matrix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.5.0"
serde_json = "1"
serde = {version="1", features = ["derive"]}
tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:matrix"

[package.metadata.component.dependencies]
